# rust-nostd-structs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: conversion.rs  lib.rs
src/algos/: mod.rs  subslice.rs
src/algos/rand/: lcg.rs  mod.rs
src/algos/slice/: mod.rs  rotating.rs  sort.rs  subslice.rs
src/conversion/: colour.rs  mod.rs
src/strucs/: mod.rs  r_tree.rs  traits.rs
src/structs/: lru_map.rs  mod.rs  r_tree.rs  rtree.rs
src/structs/algebra/: linear_equation.rs  mod.rs
src/structs/game/: fov.rs  los.rs  mod.rs
src/structs/geom/: line_2d.rs  misc.rs  mod.rs  point_2d.rs  polygon_2d.rs  shape_2d.rs  triangle_2d.rs
src/structs/trig/: cos.rs  cos_lut.rs  mod.rs  sin.rs  sin_lut.rs  sqrt.rs  tan.rs  tan_lut.rs
