[package]
name = "nostd_structs"
version = "0.1.1"
edition = "2021"
description = "Datastructures and algorithms for nostd environments"
license = "BSD-3-Clause"
repository = "https://github.com/phughk/rust-nostd-structs"
readme = "README.md"
homepage = "https://github.com/phughk/rust-nostd-structs/wiki"
documentation = "https://docs.rs/nostd_structs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nostd_structs"
path = "src/lib.rs"
