[package]
name = "nostd_structs"
version = "0.5.0"
edition = "2021"
description = "Datastructures and algorithms for nostd environments"
license = "BSD-3-Clause"
repository = "https://github.com/phughk/rust-nostd-structs"
readme = "README.md"
homepage = "https://github.com/phughk/rust-nostd-structs/wiki"
documentation = "https://docs.rs/nostd_structs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nostd_structs"
path = "src/lib.rs"
crate-type = ["lib"]

[features]
helpers = []

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
static_assertions = "1.1.0"

[dev-dependencies]
claim = "0.5.0"
proptest = "1.6.0"
